[feature] sending verfication mail completed

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=8000
-DBURL= "mongodb+srv://venue_pod:i81mhYnjAdsAnHa0@cluster0.sh7pu.mongodb.net/venuepod?retryWrites=true&w=majority"
+DATABASE= "mongodb+srv://venue_pod:i81mhYnjAdsAnHa0@cluster0.sh7pu.mongodb.net/venuepod?retryWrites=true&w=majority"
+AUTH_EMAIL = 'deep.patel.sa@gmail.com'
+AUTH_PASS = 'Deep@patel18Dec'
