[feature] sending reset password end point completed

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 PORT=8000
 DATABASE= "mongodb+srv://venue_pod:i81mhYnjAdsAnHa0@cluster0.sh7pu.mongodb.net/venuepod?retryWrites=true&w=majority"
+SERVICE = "gmail"
+HOST = "smtp.gmail.com"
 AUTH_EMAIL = 'deep.patel.sa@gmail.com'
 AUTH_PASS = 'Deep@patel18Dec'
+BASE_URL = "http://128.0.0.1:8000/"
