[feature] reset password api completed from sending link to reset password

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ SERVICE = "gmail"
 HOST = "smtp.gmail.com"
 AUTH_EMAIL = 'deep.patel.sa@gmail.com'
 AUTH_PASS = 'Deep@patel18Dec'
-BASE_URL = "http://128.0.0.1:8000/"
+BASE_URL = "http://127.0.0.1:8000"
